spud (0.11-1) unstable; urgency=low

  * Remove whitespace after edit photo command.
  * New edit form.
  * Don't hardcode large image size.
  * Fix processing of actions.

 -- Brian May <brian@debian.org>  Tue, 03 May 2011 14:25:24 +1000

spud (0.10-1) unstable; urgency=low

  * Remove obsolete command line option to import program.
  * Various bugs fixed.
  * Don't hard code image size or photos per page anywhere. Except for "large".
  * Allow customization of default settings.
  * Improve stylesheet for Mobile phone use.
  * Fix error with migrations on sqlite.

 -- Brian May <bam@debian.org>  Sat, 30 Apr 2011 11:58:45 +1000

spud (0.9-1) unstable; urgency=low

  * Improve JavaScript.
  * Rename database tables.

 -- Brian May <bam@debian.org>  Tue, 26 Apr 2011 15:22:08 +1000

spud (0.8-1) unstable; urgency=low

  * Fix permission checks. Security issue, anybody could edit photos.
  * Fix broken XHTML.
  * Make timezones more flexible. Can specify UTC+nn or UTC-nn for imports.
  * Improve photo editor, have links to most popular items.
  * Fix problems with add person and set person logic.
  * Limit width of photo summary in css.
  * Optimize how search string is generated.
  * Don't use CSRF protection for post requests that don't have side effects.

 -- Brian May <bam@debian.org>  Sun, 24 Apr 2011 09:16:42 +1000

spud (0.7-1) lucid; urgency=low

  * Fix error when accessing non-existant images.
  * Work around innodb bug, see http://south.aeracode.org/ticket/466.
  * Fiddle with stylesheets, etc.

 -- Brian May <brian@debian.org>  Tue, 05 Apr 2011 14:57:40 +1000

spud (0.6-1) lucid; urgency=low

  * Use secure session cookies by default.
  * Add missing error templates.
  * Other minor changes.

 -- Brian May <bam@debian.org>  Mon, 04 Apr 2011 14:57:23 +1000

spud (0.5-1) lucid; urgency=low

  * Fix typo that caused error when adding category to image.
  * Updates to templates. Good? Bad?
  * Edit now supports showing image in different sizes.
